Updates to settings and email
